# Voices

./: LICENSE  LICENSE.pt-BR.md  README.md  about.py  about.ui  effects.py  form.py  form.ui  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  voices.py  voices.sh  voices.spec  voices.wxs
.github/: .gitignore
.github/workflows/: build.yml  installer.yml
