[project]
name = "voices"
version = "0.1.0"
requires-python = "==3.12.*"
description = "Uma interface gráfica para Kokoro ONNX"
dependencies = [
    "debugpy>=1.8.20",
    "espeakng-loader>=0.2.4",
    "kokoro-onnx>=0.5.0",
    "language-tags>=1.3.1",
    "nuitka>=4.0.8",
    "pyinstaller>=6.20.0",
    "requests>=2.33.1",
    "zstandard>=0.25.0",
]

[tool.pyside6-project]
files = ["voices.py", "form.ui", "form.py", "about.ui", "about.py", "effects.py", "resources_rc.py", "resources.qrc"]
